[gd_scene load_steps=3 format=2]

[ext_resource path="res://source/mechanics/BallPhasing.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

radius = 25.0

[node name="BallPhasing" type="Node2D"]
script = ExtResource( 1 )

[node name="DisableTimer" type="Timer" parent="."]
one_shot = true

[node name="Area" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Area"]
shape = SubResource( 1 )

[connection signal="timeout" from="DisableTimer" to="." method="disable"]
[connection signal="area_exited" from="Area" to="." method="_on_area_exited"]
